RbA Build/src/objects/Order_Code_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Baan_IV_Column_Name__c</fullName>
        <description>The Baan IV Column Name that maps to the Salesforce API Name.</description>
        <inlineHelpText>The Baan IV Column Name that maps to the Salesforce API Name.</inlineHelpText>
        <label>Baan IV Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baan_IV_Value__c</fullName>
        <description>The BaanIV field value that maps to a Salesforce field value.</description>
        <inlineHelpText>The BaanIV field value that maps to a Salesforce field value.</inlineHelpText>
        <label>Baan IV Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Field__c</fullName>
        <label>PCS Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Value__c</fullName>
        <label>PCS Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Field__c</fullName>
        <label>Pivotal Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Value__c</fullName>
        <label>Pivotal Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_API_Name__c</fullName>
        <description>The Salesforce field API Name that maps to a BaanIV field.</description>
        <inlineHelpText>The Salesforce field API Name that maps to a BaanIV field.</inlineHelpText>
        <label>Salesforce API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Value__c</fullName>
        <description>The Salesforce field value being mapped to a BaanIV field value.</description>
        <inlineHelpText>The Salesforce field value being mapped to a BaanIV field value.</inlineHelpText>
        <label>Salesforce Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Code Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OCL-{0000}</displayFormat>
        <label>Order Code Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Code Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>